--- a/index.html
+++ b/index.html
@@ -1,17 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project-Starter</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Cash Register</title>
 </head>
 <body>
-    <h1>Project-Starter</h1>
-    <script src="./script.js"></script>
+  <div class="container">
+    <section class="content">
+      <h1>Cash Register</h1>
+      <p>Enter the bill amount and cas given by the customer and know minimum number of notes to return</p>
+    </section>
+		<form id="bill-form">
+
+			<div class="form-group">
+				<label for="bill-amount">Bill Amount</label>
+				<input type="text" name="bill-amount" id="bill-amount" placeholder="0.0" required>
+			</div>
+
+			<div class="form-group">
+				<label for="cash-amount">Cash Given</label>
+				<input type="text" name="cash-amount" id="cash-amount" placeholder="0.0" required>
+			</div>
+
+			<div class="form-group">
+		        <h2>Return Change</h2>
+				<button id="balance" type="submit">Change</button>
+			</div>
+
+		</form>
+
+
+		<!-- <section class="output">
+			<table class="notes">
+				<tbody>
+					<tr>
+						<th>No. of notes</th>
+						<td>0</td>
+						<td>0</td>
+						<td>0</td>
+						<td>0</td>
+						<td>0</td>
+						<td>0</td>
+						<td>0</td>
+					</tr>
+
+					<tr>
+						<th>Notes</th>
+						<td>2000</td>
+						<td>500</td>
+						<td>100</td>
+						<td>20</td>
+						<td>10</td>
+						<td>5</td>
+						<td>1</td>
+					</tr>
+
+				</tbody>
+			</table>
+		</section> -->
+  </div>
+<script src="./script.js"></script>
 </body>
 </html>
