fixed failed linter

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="container">
-    <h1>Cash Register</h1>
+    <h1> <span>Ca</span>sh<span> Re</span>gi<span>st</span>er</h1>
 
     <table>
       <tc>
@@ -35,11 +35,11 @@
 
     <div class="input">
       <div class="bill">
-        <label for="bill-amount">Bill :</label>
+        <label for="bill-amount"><span>Bill</span>:</label>
         <input type="text" name="bill-amount" id="bill-amount" placeholder="0.0" required>
       </div>
       <div class="cash">
-        <label for="cash-amount">Cash :</label>
+        <label for="cash-amount"><span>Cash</span>:</label>
         <input type="text" name="cash-amount" id="cash-amount" placeholder="0.0" required>
       </div>
 
